--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>app.msign</groupId>
   <artifactId>qrsign-api</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>0.1</version>
 
   <name>qrsign-api</name>
   <url>http://msign.app</url>
